ticker rename applied

--- a/docker/conf/bootstrap-ceremony.conf
+++ b/docker/conf/bootstrap-ceremony.conf
@@ -310,14 +310,14 @@ casper {
     # Plain text file consisting of lines of the form `<pk> <stake>`,
     # which defines the bond amounts for each validator at genesis.
     # <pk> is the public key (in base-16 encoding) identifying the validator and <stake>
-    # is the amount of Rev they have bonded (an integer).
+    # is the amount of ASI they have bonded (an integer).
     bonds-file = ${casper.genesis-block-data.genesis-data-dir}/bonds.txt
 
-    # Plain text file consisting of lines of the form `<algorithm> <pk> <revBalance>`,
-    # which defines the Rev wallets that exist at genesis.
+    # Plain text file consisting of lines of the form `<algorithm> <pk> <asiBalance>`,
+    # which defines the ASI wallets that exist at genesis.
     # <algorithm> is the algorithm used to verify signatures when using the wallet (one of ed25519 or secp256k1),
-    # <pk> is the public key (in base-16 encoding) identifying the wallet and <revBalance>
-    # is the amount of Rev in the wallet.
+    # <pk> is the public key (in base-16 encoding) identifying the wallet and <asiBalance>
+    # is the amount of ASI in the wallet.
     wallets-file = ${casper.genesis-block-data.genesis-data-dir}/wallets.txt
 
     # Minimum bond accepted by the PoS contract in the genesis block.
